--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -361,3 +361,25 @@ footer a {
       font-size: 1.7rem;
     }
   }
+
+
+@media print{
+    header,aside,iframe,section,footer{
+        display: none;
+    }
+    .htmlSymbol {
+        display: inline-block;
+        border: 4px solid purple;
+        width: 10%;
+      }
+      .htmlSecondLayer{
+        display: inline-block;
+        border: 4px solid #00a1c6;
+      }
+    
+      .htmlSymbol img {
+        max-width: 95%;
+        margin: 2px;
+        vertical-align: middle;
+      }
+}
