--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,18 +81,26 @@ header nav li a::before {
     width: 85%;
     margin: 0 auto;
     margin-bottom: 1.5em;
-    height: 90px;
-    padding: 1em 0.5em;
-  }
-  header p {
-    display: inline;
-    vertical-align: top;
-  }
+    height: 100px;
+    padding: 0;
+  }  
   header div {
-    float: left;
+    display: inline-block;
+    width: 70%;
+    padding-right: 20px;
   }
-  header div img {
-    margin: 0;
+  header div p {
+    vertical-align: middle;
+    display: inline;
+
+  }
+  header div img{
+    vertical-align: middle;
+;
+  }
+  header nav {
+    display: inline-block;
+    vertical-align: middle;
   }
 }
 
@@ -230,11 +238,12 @@ aside div p:last-child {
 @media screen and (min-width: 576px) {
   .htmlSymbol {
     display: block;
-    border: 4px solid purple;
+    border: 4px solid #00a1c6;
+    outline: 4px solid purple;
     width: 15%;
   }
   .htmlSecondLayer {
-    border: 4px solid #00a1c6;
+  border: none;
   }
 
   .htmlSymbol img {
@@ -303,11 +312,12 @@ aside div p:last-child {
     line-height: 3.5rem;
   }
   iframe, main section{
-    width: 49%;
+    width: 50%;
     height: 250px;
     display: inline-block;
     vertical-align: middle;
     border-radius: 20px;
+    margin-inline: -2px;
   }
   section h2 {
     padding:0.5rem;
@@ -326,6 +336,7 @@ aside h2{
 aside div{
     width: 33%;
     display: inline-block;
+    margin-inline: -3px;
 
 }
 }
